Some minor Bunnings changes

--- a/newDesign/bunnings.html
+++ b/newDesign/bunnings.html
@@ -262,28 +262,29 @@ Use Openpay at Bunnings to get the kitchen you really want. You can split the co
    
     <div class="footer">
         <div class="footerMenu">
-            <a href="help.html" class="footerNav">Help & Contact</a>
-            <a href="business.html" class="footerNav">For Merchants</a>
-            <a href="careers.html" class="footerNav">Careers</a>
-            <a href="blog.html" class="footerNav">Blog</a>
-        </div>
+                <a href="shop.html" class="footerNav">Shop now</a>
+                <a href="how.html" class="footerNav">how it works</a>
+                <a href="business.html" class="footerNav">I'm a business</a>
+                <a href="help.html" class="footerNav">Help & contact</a>
+                <a href="legal.html" class="footerNav">Legal stuff</a>
+            </div>
         <div class="socialLinks">
-				<span>
-					<a href="https://facebook.com/openpayau" class="footer-icon fb">
-						Facebook
-					</a>
-					<a href="https://twitter.com/openpay_" class="footer-icon twit">
-						Twitter
-					</a>
-				</span>
+                <span>
+                    <a href="https://facebook.com/openpayau" class="footer-icon fb">
+                        Facebook
+                    </a>
+                    <a href="https://twitter.com/openpay_" class="footer-icon twit">
+                        Twitter
+                    </a>
+                </span>
             <span>
-					<a href="https://au.linkedin.com/company/open-pay" class="footer-icon linked">
-						LinkedIn
-					</a>
-					<a href="https://www.instagram.com/openpay_" class="footer-icon ig">
-						Instagram
-					</a>
-				</span>
+                    <a href="https://au.linkedin.com/company/open-pay" class="footer-icon linked">
+                        LinkedIn
+                    </a>
+                    <a href="https://www.instagram.com/openpay_" class="footer-icon ig">
+                        Instagram
+                    </a>
+                </span>
         </div>
         <div class="footerAppWrapper">
             <a href="https://itunes.apple.com/au/app/openpay/id1166424403?mt=8">
