Added taking shape case study and link

--- a/newDesign/business.html
+++ b/newDesign/business.html
@@ -156,7 +156,7 @@
                 </div>
                 <div class="col-3">
                     <div class="tellMeMoreBtn">
-                        Tell me more
+                        <a class="button" href="docs/womens-casestudy.pdf">Tell me more</a>
                     </div>
                 </div>
                 <div class="clear"></div>
