Aligned page titles with page headings.

--- a/newDesign/index.html
+++ b/newDesign/index.html
@@ -4,7 +4,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="Openpay" content="app-id=1166424403">
 	<link rel="shortcut icon" type="image/png" href="./images/favicon.png"/>
-    <title>Openpay</title>
+    <title>Openpay - Buy now, Pay Smarter</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-84225706-1"></script>
 	<script>
