--- a/newDesign/business.html
+++ b/newDesign/business.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="shortcut icon" type="image/png" href="./images/favicon.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Openpay - Shop</title>
+    <title>Openpay: I'm a business - Enable new audiences</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-84225706-1"></script>
     <script>
@@ -141,7 +141,7 @@
     </div>
     <div class="whyUseCircles greyPane">
         <div class="bodyContainer">
-            <h1>Why use Openpay</h1>
+            <h1>Womens Fashion Case Study</h1>
             <div class="bodyContainer">
                 <div class="fourPanes">
                 <div class="col-3">
