--- a/newDesign/help.html
+++ b/newDesign/help.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="shortcut icon" type="image/png" href="./images/favicon.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Openpay - Help</title>
+    <title>Openpay: Help - We're here for you</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-84225706-1"></script>
     <script>
