Basic styling changes

--- a/newDesign/index.html
+++ b/newDesign/index.html
@@ -78,7 +78,7 @@
 			</div>
 		</div>
 		<div class="promotions">
-			<h1>Featured promotions</h1>
+			<h1>Featured Retailers</h1>
 			<div class="treeBanners">
 				<div class="col-3">
 					<img src="./images/feature-three-for-free.png">
