--- a/newDesign/help.html
+++ b/newDesign/help.html
@@ -122,7 +122,7 @@
                 </div>
                 <div class="subSection">
                     <h3>Is my information secure with Openpay?</h3>
-                    <p>Yes, protecting your information is very important to us. Openpay is a Level 1 PCI DSS Compliant Provider. This means that all sensitive information is encrypted and we maintain stringent physical, electronic and procedural safeguards to protect your information. Our privacy policy is available on <a href="https://www.openpay.com.au/privacy-policy/" >this website</a>.</p>
+                    <p>Yes, protecting your information is very important to us. Openpay is a Level 1 PCI DSS Compliant Provider. This means that all sensitive information is encrypted and we maintain stringent physical, electronic and procedural safeguards to protect your information. Our privacy policy is available on <a href="au.privacy.html" >this website</a>.</p>
                     <a onclick="topFunction()" href="#">Back to top</a>
                 </div>
             </div>
@@ -139,7 +139,7 @@
                     <h3>How do I update my card details?</h3>
                     <p>
                         You can quickly and easily update your card details in the Openpay app. Alternatively, you can also update your payment details by calling 1300 168 359. Our business hours are Monday to Friday 9 a.m. – 5 p.m. AEST. You will also need to contact us if your card has been lost or stolen to update your card details.
-                        <br><b>Note: Please never email card details to us or leave these details on a messaging service. Simply leave your name and contact details and one of customer service members will be in touch.</b>
+                        <br><i>Note: Please never email card details to us or leave these details on a messaging service. Simply leave your name and contact details and one of customer service members will be in touch.</i>
                     </p>
                     <a onclick="topFunction()" href="#">Back to top</a>
                 </div>
@@ -201,7 +201,7 @@
                 <div class="col-2">
                     <img class="iconEmail" src="./images/iconEmail.svg">
                     <h2>Email Us</h2>
-                    <p>For no-urgent and general help, contact by email. we'll get back to promptly.</p>
+                    <p>For non-urgent and general help, contact by email. we'll get back to promptly.</p>
                     <div class="btnBox"><a href="mailto:info@openpay.com.au">info@openpay.com.au</a></div>
                 </div>
                 <div class="col-2">
