--- a/newDesign/how.html
+++ b/newDesign/how.html
@@ -151,7 +151,7 @@
     </div>
     <div class="promotions">
         <div class="bodyContainer">
-            <h1>Featured promotions</h1>
+            <h1>Featured Retailers</h1>
             <div class="treeBanners">
 		<div class="col-3">
 			<img src="./images/feature-three-for-free.png">
