--- a/newDesign/bunnings.html
+++ b/newDesign/bunnings.html
@@ -40,7 +40,7 @@
 <div class="topNav">
     <a class="mainLogo" href="index.html"></a>
     <a href="shop.html">Shop now</a>
-    <a class="active" href="how.html">How it works</a>
+    <a href="how.html">How it works</a>
     <a href="business.html">I'm a business</a>
     <a href="help.html">Help & contact</a>
     <div class="topNavRight">
