--- a/newDesign/business.html
+++ b/newDesign/business.html
@@ -75,7 +75,7 @@
                 <p>
                     Give your existing and future customers change to the way they pay.
                 </p>
-                <div class="btnBox"><a href="register.html">Register your interest</a></div>
+                <div class="btnBox"><a href="mailto:info@openpay.com.au">Register your interest</a></div>
             </div>
         </div>
     </div>
@@ -219,7 +219,7 @@
         <div class="bodyContainer">
             <h1>Ready to increase sales with Openpay?</h1>
             <p>Start selling more with no risk. Enquire now, we'll get back to you within 24 hours.</p>
-            <div class="btnBox"><a href="register.html">Register your interest</a></div>
+            <div class="btnBox"><a href="mailto:info@openpay.com.au">Register your interest</a></div>
         </div>
     </div>
     <div class="footer">
