Fixed active state on desktop

--- a/newDesign/business.html
+++ b/newDesign/business.html
@@ -75,7 +75,10 @@
                 <p>
                     Give your existing and future customers change to the way they pay.
                 </p>
-                <div class="btnBox"><a href="register.html">Register your interest</a></div>
+                <div class="btnBox"><a href="mailto:info@openpay.com.au?subject=Website Merchant Enquiry&body=
+Hi%20Openpay,%0d%0dI'd%20like%20to%20know%20more%20about%20providing%20Openpay%20to%20our%20customers. %0d%0dHere%20are%20my%20details: %0d%0dBusiness%20Name:%20%20%0dBusiness%20Trading%20Names:%20%20%0dContact%20Name:%20%20%0dContact%20Number:%20%20%0dContact%20e-mail:%20%20%0dContact%20Position:%20%20%0dIndustry:%20%20%0dEntity%20Ownership%20Structure:%20%20%0dFranchisee:%20%20%0dFranchise%20Group%20Name:%20%20%0dDo%20you%20have%20a%20Parent%20Company:%20%20%0dParent%20Company%20Name:%20%20%0dAre%20you%20part%20of%20an%20Industry%20Group%20or%20Association?:%20%20%0dIndustry%20Group%20or%20Association%20Name:%20%20%0dStreet:%20%20%20%0dSuburb:%20%20%0dZip/Post%20Code:%20%20%0dState:%20%20%0dCountry:%20%20%0dNumber%20of%20Locations:%20%20%0dDate%20entity%20started%20trading:%20%20%0dSales%20Channels:%20%20%0dAnnual%20Turnover:%20%20%0dAverage%20Transaction%20Value:%20%20%0dNotes%20–%20Additional%20Information:%20%20%0dTerms%20and%20Conditions%20Agreed:%20%20%0dABN:%20%20%0dACN:%20%20%0dProduct%20Liability%20Insurance:%20%20%0dProfessional%20Indemnity%20Insurance:%20%20%0dProfessional%20Liability%20Insurance:%20%20%0dMinimum%20Transaction%20Value:%20%20%0dMaximum%20Transaction%20Value:%20%20%0d%0dFull%20name%20(s):%20%20%0dDate%20of%20Birth:%20%20%0dDriver’s%20License%20number:%20%20%0dTrust%20Deed:%20%20
+
+">Register your interest</a></div>
             </div>
         </div>
     </div>
@@ -219,7 +222,10 @@
         <div class="bodyContainer">
             <h1>Ready to increase sales with Openpay?</h1>
             <p>Start selling more with no risk. Enquire now, we'll get back to you within 24 hours.</p>
-            <div class="btnBox"><a href="register.html">Register your interest</a></div>
+            <div class="btnBox"><a href="mailto:info@openpay.com.au?subject=Website Merchant Enquiry&body=
+Hi%20Openpay,%0d%0dI'd%20like%20to%20know%20more%20about%20providing%20Openpay%20to%20our%20customers. %0d%0dHere%20are%20my%20details: %0d%0dBusiness%20Name:%20%20%0dBusiness%20Trading%20Names:%20%20%0dContact%20Name:%20%20%0dContact%20Number:%20%20%0dContact%20e-mail:%20%20%0dContact%20Position:%20%20%0dIndustry:%20%20%0dEntity%20Ownership%20Structure:%20%20%0dFranchisee:%20%20%0dFranchise%20Group%20Name:%20%20%0dDo%20you%20have%20a%20Parent%20Company:%20%20%0dParent%20Company%20Name:%20%20%0dAre%20you%20part%20of%20an%20Industry%20Group%20or%20Association?:%20%20%0dIndustry%20Group%20or%20Association%20Name:%20%20%0dStreet:%20%20%20%0dSuburb:%20%20%0dZip/Post%20Code:%20%20%0dState:%20%20%0dCountry:%20%20%0dNumber%20of%20Locations:%20%20%0dDate%20entity%20started%20trading:%20%20%0dSales%20Channels:%20%20%0dAnnual%20Turnover:%20%20%0dAverage%20Transaction%20Value:%20%20%0dNotes%20–%20Additional%20Information:%20%20%0dTerms%20and%20Conditions%20Agreed:%20%20%0dABN:%20%20%0dACN:%20%20%0dProduct%20Liability%20Insurance:%20%20%0dProfessional%20Indemnity%20Insurance:%20%20%0dProfessional%20Liability%20Insurance:%20%20%0dMinimum%20Transaction%20Value:%20%20%0dMaximum%20Transaction%20Value:%20%20%0d%0dFull%20name%20(s):%20%20%0dDate%20of%20Birth:%20%20%0dDriver’s%20License%20number:%20%20%0dTrust%20Deed:%20%20
+
+">Register your interest</a></div>
         </div>
     </div>
     <div class="footer">
