Title changes on search and commented out the "featured retailers"

--- a/newDesign/shop.html
+++ b/newDesign/shop.html
@@ -148,7 +148,7 @@
     </div>
     <div class="promotions greyPane" id="promotions">
         <div class="bodyContainer">
-            <h1>Current promotions</h1>
+            <h1>Featured Retailers</h1>
             <div class="treeBanners">
                 <div class="col-3">
                     <img src="./images/feature-three-for-free.png">
@@ -166,7 +166,7 @@
     <div class="clear"></div>
     <div class="byCategory greyPane" id="categories-grid">
         <div class="bodyContainer">
-            <h1>So where can I shop?</h1>
+            <h1>Browse by category</h1>
             <div class="fourBanners">
                 <div class="col-4">
                     <div class="marketToProvide" data-value="209002">
@@ -217,7 +217,7 @@
             </div>
         </div>
     </div>
-    <div class="promotions brands greyPane" id="featured">
+<!--     <div class="promotions brands greyPane" id="featured">
         <div class="bodyContainer">
             <h1>Featured Brands</h1>
             <div class="treeBanners">
@@ -335,7 +335,7 @@
             </div>
             <div class="clear"></div>
         </div>
-    </div>
+    </div> -->
     <div class="brands-search-results greyPane" id="search-results">
         <div class="bodyContainer">
             <h1 id="search-results-heading"></h1>
