Updated "why use open pay" on business. It was the wrong content.

--- a/newDesign/business.html
+++ b/newDesign/business.html
@@ -98,28 +98,28 @@ Hi%20Openpay,%0d%0dI'd%20like%20to%20know%20more%20about%20providing%20Openpay%2
             <div class="col-4">
                 <div class="whyUseOpenpayIcon customers"></div>
                 <h2>
-                    Increase ATV & conversion
+                    Gain new customers
                 </h2>
                 <p>
-                    Consumers are more comfortable spending more when they have more time to pay and no scary interest.
+                    Our extensive database delivers cross sell opportunities and customers who prefer using Openpay
                 </p>
             </div>
             <div class="col-4">
                 <div class="whyUseOpenpayIcon risk"></div>
                 <h2>
-                    Increase ATV & conversion
+                    Zero Risk
                 </h2>
                 <p>
-                    Consumers are more comfortable spending more when they have more time to pay and no scary interest.
+                    We pay you the next business day in full, less our fee, which helps your case flow management.
                 </p>
             </div>
             <div class="col-4">
                 <div class="whyUseOpenpayIcon lock"></div>
                 <h2>
-                    Increase ATV & conversion
+                    Secure
                 </h2>
                 <p>
-                    Consumers are more comfortable spending more when they have more time to pay and no scary interest.
+                    PCI Data Security compliant as a Level 1 Service Provider.
                 </p>
             </div>
             <div class="clear"></div>
