Added anchor tag to download app on home page to help users find it.

--- a/newDesign/index.html
+++ b/newDesign/index.html
@@ -107,7 +107,7 @@
 					<div class="options">
 						<img src="./images/card.png" class="icon">
 						<h2>Join the club</h2>
-						<p>Download the app, register for an account, and get instantly approved.</p>
+						<p><a href="#download">Download the app</a>, register for an account, and get instantly approved.</p>
 					</div>
 				</div>
 				<div class="col-3">
@@ -198,6 +198,7 @@
 			</div>
 		</div>
 		<div class="downloadApp">
+			<a name="download"></a>
 			<h1>Download the Openpay app</h1>
 			<p>
 				Browse for shops and services, manage your payment schedule and
