--- a/newDesign/bunnings.html
+++ b/newDesign/bunnings.html
@@ -40,7 +40,7 @@
 <div class="topNav">
     <a class="mainLogo" href="index.html"></a>
     <a href="shop.html">Shop now</a>
-    <a href="how.html">How it works</a>
+    <a class="active" href="how.html">How it works</a>
     <a href="business.html">I'm a business</a>
     <a href="help.html">Help & contact</a>
     <div class="topNavRight">
@@ -119,12 +119,15 @@ And now you can use Openpay for anything you need at Bunnings. Whether its a hot
 					</div>
 				</div>
 			</div>
+
+            
 			<div class="clear"></div>
 			<div class="learnMoreWrapper">
-				<a class="button" href="how.html">Learn more</a>
+				<!--<a class="button" href="how.html">Learn more</a>-->
 			</div>
 			<div class="clear"></div>
 		</div>
+
 
 
 
@@ -262,29 +265,28 @@ Use Openpay at Bunnings to get the kitchen you really want. You can split the co
    
     <div class="footer">
         <div class="footerMenu">
-                <a href="shop.html" class="footerNav">Shop now</a>
-                <a href="how.html" class="footerNav">how it works</a>
-                <a href="business.html" class="footerNav">I'm a business</a>
-                <a href="help.html" class="footerNav">Help & contact</a>
-                <a href="legal.html" class="footerNav">Legal stuff</a>
-            </div>
+            <a href="help.html" class="footerNav">Help & Contact</a>
+            <a href="business.html" class="footerNav">For Merchants</a>
+            <a href="careers.html" class="footerNav">Careers</a>
+            <a href="blog.html" class="footerNav">Blog</a>
+        </div>
         <div class="socialLinks">
-                <span>
-                    <a href="https://facebook.com/openpayau" class="footer-icon fb">
-                        Facebook
-                    </a>
-                    <a href="https://twitter.com/openpay_" class="footer-icon twit">
-                        Twitter
-                    </a>
-                </span>
+				<span>
+					<a href="https://m.facebook.com/openpayau" class="footer-icon fb">
+						Facebook
+					</a>
+					<a href="https://twitter.com/openpay_" class="footer-icon twit">
+						Twitter
+					</a>
+				</span>
             <span>
-                    <a href="https://au.linkedin.com/company/open-pay" class="footer-icon linked">
-                        LinkedIn
-                    </a>
-                    <a href="https://www.instagram.com/openpay_" class="footer-icon ig">
-                        Instagram
-                    </a>
-                </span>
+					<a href="https://au.linkedin.com/company/open-pay" class="footer-icon linked">
+						LinkedIn
+					</a>
+					<a href="https://www.instagram.com/openpay_" class="footer-icon ig">
+						Instagram
+					</a>
+				</span>
         </div>
         <div class="footerAppWrapper">
             <a href="https://itunes.apple.com/au/app/openpay/id1166424403?mt=8">
@@ -294,14 +296,14 @@ Use Openpay at Bunnings to get the kitchen you really want. You can split the co
                 <img class="android" src="./images/android.svg">
             </a>
         </div>
-            <div class="footerMoreLinksMenu">
-                <a href="legal.html" class="footerNav">Privacy</a>
-                <a href="legal.html" class="footerNav">Terms & Conditions</a>
-                <a href="legal.html" class="footerNav">User Licence</a>
-                <a href="legal.html" class="footerNav">PCI Data Security</a>
-            </div>
-        <p>© Openpay &nbsp; | &nbsp; Made in Melbourne, Australia</p>
-        <a class="whiteLogo" href="index.html">
+        <div class="footerMoreLinksMenu">
+            <a href="privacy.html" class="footerNav">Privacy</a>
+            <a href="terms.html" class="footerNav">Terms & Conditions</a>
+            <a href="userLicence.html" class="footerNav">User Licence</a>
+            <a href="PCI.html" class="footerNav">PCI Data Security</a>
+        </div>
+        <p>© Openpay &nbsp; | &nbsp; Made with <3 in Melbourne, Australia</p>
+        <a class="whiteLogo" href="/">
             <img src="./images/openpay_logo_white.svg">
         </a>
 
