Updating for non active nav state

--- a/newDesign/bunnings.html
+++ b/newDesign/bunnings.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="shortcut icon" type="image/png" href="./images/favicon.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Openpay - Shop</title>
+    <title>Openpay - Bunnings</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-84225706-1"></script>
     <script>
@@ -40,7 +40,7 @@
 <div class="topNav">
     <a class="mainLogo" href="index.html"></a>
     <a href="shop.html">Shop now</a>
-    <a class="active" href="how.html">How it works</a>
+    <a href="how.html">How it works</a>
     <a href="business.html">I'm a business</a>
     <a href="help.html">Help & contact</a>
     <div class="topNavRight">
