--- a/newDesign/register.html
+++ b/newDesign/register.html
@@ -33,6 +33,7 @@
         })(window,document,window['_fs_namespace'],'script','user');
     </script>
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,600" rel="stylesheet">
+    <link rel="stylesheet" href="./css/register.css" />
     <link rel="stylesheet" href="./css/help.css" />
     <link rel="stylesheet" href="css/nav.css">
 </head>
@@ -42,7 +43,7 @@
     <a href="shop.html">Shop now</a>
     <a href="how.html">How it works</a>
     <a href="business.html">I'm a business</a>
-    <a class="active" href="help.html">Help & contact</a>
+    <a href="help.html">Help & contact</a>
     <div class="topNavRight">
         <a href="https://retailer.myopenpay.com.au/live/Account/Login/">Merchant log in</a>
     </div>
@@ -67,19 +68,110 @@
     </div>
 </nav>
 <div class="mainContent">
-    <div class="heroHelpContainer">
-        <div class="greyWithOpacity"></div>
-        <div class="bodyContainer">
-            <div class="heroInfo">
-                <h1>Register</h1>
-            </div>
-        </div>
-    </div>
 
     <div class="helpContent greyPane">
         <div class="bodyContainer">
-            <h1>Join the movement</h1>
-            <p>Join the growing list of locations that are empowering previously<br>untapped audiences to live their lifestyle</p>
+            <h1>Merchant Registration</h1>
+            <p>Merchant Details</p>
+
+            <form id="msform">
+                <!-- progressbar -->
+                <ul id="progressbar">
+                    <li class="active"></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+                <!-- fieldsets -->
+                <fieldset class="step1">
+                    <h2 class="fs-title">Product Details</h2>
+                    <input class="require" type="text" name="nf-field-1" placeholder="Merchant name" />
+                    <input type="text" name="nf-field-2" placeholder="Known trader names" />
+                    <input type="text" name="nf-field-3" placeholder="Corporate entity name" />
+                    <input type="text" name="nf-field-4" placeholder="ACN/ABN" />
+                    <input type="text" name="nf-field-5" placeholder="Corporate entity address" />
+                    <textarea class="require" name="nf-field-6" placeholder="Store location(s)" rows="1"></textarea>
+                    <select name="nf-field-7">
+                        <option value="100% corporate owned">100% corporate owned</option>
+                        <option value="Mix of Corporate Owned &amp; Independently Owned (Partially Franchised)">Mix of Corporate Owned &amp; Independently Owned (Partially Franchised)</option>
+                        <option value="Franchise model">Franchise model</option>
+                    </select>
+                    <input  class="require" type="text" name="nf-field-33" placeholder="Annual corporate turnover" />
+                    <input type="text" name="nf-field-8" placeholder="Date company started trading" />
+                    <p>Are you insured?  </p>
+                    <ul>
+                        <li>
+                            <input type="checkbox" name="nf-field-9" value="product liability">
+                            <label>Product liability</label>
+                            <div class="clear"></div>
+                        </li>
+                        <li>
+                            <input type="checkbox" name="nf-field-10" value="professional indemnity">
+                            <label>Professional indemnity</label>
+                            <div class="clear"></div>
+                        </li>
+                    </ul>
+                    <div class="clear"></div>
+
+                    <input type="button" name="next" class="next action-button" value="Next" />
+                </fieldset>
+                <fieldset class="step2">
+                    <h2 class="fs-title">Product Details</h2>
+                    <input type="text" name="nf-field-11" placeholder="Products sold by merchant" />
+                    <input type="text" name="nf-field-12" placeholder="Products proposed to be financed by Openpay" />
+                    <input type="text" name="nf-field-13" placeholder="Products excluded from Openpay financing" />
+                    <input type="text" name="nf-field-14" placeholder="Target demographic" />
+
+                    <p>Method of sale  </p>
+                    <ul>
+                        <li>
+                            <input type="checkbox" name="nf-field-15" value="in-store">
+                            <label>In store</label>
+                            <div class="clear"></div>
+                        </li>
+                        <li>
+                            <input type="checkbox" name="nf-field-16" value="online">
+                            <label>Online</label>
+                            <div class="clear"></div>
+                        </li>
+                        <li>
+                            <input type="checkbox" name="nf-field-17" value="phone">
+                            <label>Phone</label>
+                            <div class="clear"></div>
+                        </li>
+                    </ul>
+                    <div class="clear"></div>
+                    <input type="text" name="nf-field-15" placeholder="Target demographic" />
+                    <select name="nf-field-16">
+                        <option value="" disabled selected>Estimated dispatch time</option>
+                        <option value="Same day">Same day</option>
+                        <option value="1-3">1-3 days</option>
+                        <option value="3-5">3-5 days</option>
+                        <option value="5-7">5-7 days</option>
+                        <option value="7+">7 days+</option>
+                    </select>
+                    <input type="button" name="previous" class="previous action-button" value="Previous" />
+                    <input type="button" name="next" class="next action-button" value="Next" />
+                </fieldset>
+                <fieldset class="step3">
+                    <h2 class="fs-title">Confirm Registration</h2>
+                    <input class="require" type="text" name="nf-field-17" placeholder="First Name" />
+                    <input class="require" type="text" name="nf-field-18" placeholder="Last Name" />
+                    <input class="require" type="email" name="nf-field-19" placeholder="Email" />
+                    <textarea name="nf-field-20" placeholder="Address"></textarea>
+
+
+                    <ul>
+                        <li>
+                            <input class="require" type="checkbox" name="nf-field-21" value="in-store">
+                            <label style="width: 380px;">By ticking this box you acknowledge accessing, reading and agreeing to the terms of <a href="#" target="_blank">this document</a> and our <a href="http://www.openpay.com.au/privacy-policy/" target="_blank">privacy policy</a>. <span class="ninja-forms-req-symbol">*</span> </label>
+                            <div class="clear"></div>
+                        </li>
+                    </ul>
+                    <input type="button" name="previous" class="previous action-button" value="Previous" />
+                    <input type="submit" name="submit" class="submit action-button" value="Submit" />
+                </fieldset>
+            </form>
+            <div class="clear"></div>
         </div>
     </div>
 
@@ -130,25 +222,8 @@
 
     </div>
 </div>
-
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script>
-    // When the user scrolls down 20px from the top of the document, show the button
-    window.onscroll = function() {scrollFunction()};
-
-    function scrollFunction() {
-        if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-            document.getElementById("myBtn").style.display = "block";
-        } else {
-            document.getElementById("myBtn").style.display = "none";
-        }
-    }
-
-    // When the user clicks on the button, scroll to the top of the document
-    function topFunction() {
-        document.body.scrollTop = 0;
-        document.documentElement.scrollTop = 0;
-    }
-</script>
+<script src="scripts/jquery.easing.min.js" type="text/javascript"></script>
+<script src="scripts/registration.js" type="text/javascript"></script>
 </body>
 </html>
