--- a/newDesign/index.html
+++ b/newDesign/index.html
@@ -230,17 +230,21 @@
 			<div class="socialLinks">
 				<span>
 					<a href="https://facebook.com/openpayau" class="footer-icon fb">
+						<img src="./images/social/Fb.svg">
 						Facebook
 					</a>
 					<a href="https://twitter.com/openpay_" class="footer-icon twit">
+						<img src="./images/social/Twitter.svg">
 						Twitter
 					</a>
 				</span>
 				<span>
 					<a href="https://au.linkedin.com/company/open-pay" class="footer-icon linked">
+						<img src="./images/social/in.svg">
 						LinkedIn
 					</a>
 					<a href="https://www.instagram.com/openpay_" class="footer-icon ig">
+						<img src="./images/social/Insta.svg">
 						Instagram
 					</a>
 				</span>
