--- a/newDesign/register.html
+++ b/newDesign/register.html
@@ -111,7 +111,7 @@
                         </li>
                     </ul>
                     <div class="clear"></div>
-
+                    <p class="requiredNote">* Please complete all required</p>
                     <input type="button" name="next" class="next action-button" value="Next" />
                 </fieldset>
                 <fieldset class="step2">
@@ -167,6 +167,7 @@
                             <div class="clear"></div>
                         </li>
                     </ul>
+                    <p class="requiredNote">* Please complete all required</p>
                     <input type="button" name="previous" class="previous action-button" value="Previous" />
                     <input type="submit" name="submit" class="submit action-button" value="Submit" />
                 </fieldset>
