--- a/newDesign/shop.brand.html
+++ b/newDesign/shop.brand.html
@@ -161,25 +161,30 @@
 <div class="clear"></div>
 <div class="footer">
     <div class="footerMenu">
-        <a href="help.html" class="footerNav">Help & Contact</a>
-        <a href="business.html" class="footerNav">For Merchants</a>
-        <a href="careers.html" class="footerNav">Careers</a>
-        <a href="blog.html" class="footerNav">Blog</a>
+        <a href="shop.html" class="footerNav">Shop now</a>
+        <a href="how.html" class="footerNav">how it works</a>
+        <a href="business.html" class="footerNav">I'm a business</a>
+        <a href="help.html" class="footerNav">Help & contact</a>
+        <a href="legal.html" class="footerNav">Legal stuff</a>
     </div>
     <div class="socialLinks">
 				<span>
 					<a href="https://facebook.com/openpayau" class="footer-icon fb">
+						<img src="./images/social/Fb.svg">
 						Facebook
 					</a>
 					<a href="https://twitter.com/openpay_" class="footer-icon twit">
+						<img src="./images/social/Twitter.svg">
 						Twitter
 					</a>
 				</span>
         <span>
 					<a href="https://au.linkedin.com/company/open-pay" class="footer-icon linked">
+						<img src="./images/social/in.svg">
 						LinkedIn
 					</a>
 					<a href="https://www.instagram.com/openpay_" class="footer-icon ig">
+						<img src="./images/social/Insta.svg">
 						Instagram
 					</a>
 				</span>
@@ -192,12 +197,12 @@
             <img class="android" src="./images/android.svg">
         </a>
     </div>
-            <div class="footerMoreLinksMenu">
-                <a href="legal.html" class="footerNav">Privacy</a>
-                <a href="legal.html" class="footerNav">Terms & Conditions</a>
-                <a href="legal.html" class="footerNav">User Licence</a>
-                <a href="legal.html" class="footerNav">PCI Data Security</a>
-            </div>
+    <div class="footerMoreLinksMenu">
+        <a href="legal.html" class="footerNav">Privacy</a>
+        <a href="legal.html" class="footerNav">Terms & Conditions</a>
+        <a href="legal.html" class="footerNav">User Licence</a>
+        <a href="legal.html" class="footerNav">PCI Data Security</a>
+    </div>
     <p>© Openpay &nbsp; | &nbsp; Made in Melbourne, Australia</p>
     <a class="whiteLogo" href="index.html">
         <img src="./images/openpay_logo_white.svg">
