--- a/newDesign/au.terms.html
+++ b/newDesign/au.terms.html
@@ -232,63 +232,59 @@
 	</div>
         </div>
     </div>
-  
-    <div class="footer">
-        <div class="footerMenu">
-				<a href="shop.html" class="footerNav">Shop now</a>
-				<a href="how.html" class="footerNav">how it works</a>
-				<a href="business.html" class="footerNav">I'm a business</a>
-				<a href="help.html" class="footerNav">Help & contact</a>
-				<a href="legal.html" class="footerNav">Legal stuff</a>
-			</div>
-        <div class="socialLinks">
+
+	<div class="footer">
+		<div class="footerMenu">
+			<a href="shop.html" class="footerNav">Shop now</a>
+			<a href="how.html" class="footerNav">how it works</a>
+			<a href="business.html" class="footerNav">I'm a business</a>
+			<a href="help.html" class="footerNav">Help & contact</a>
+			<a href="legal.html" class="footerNav">Legal stuff</a>
+		</div>
+		<div class="socialLinks">
 				<span>
 					<a href="https://facebook.com/openpayau" class="footer-icon fb">
+						<img src="./images/social/Fb.svg">
 						Facebook
 					</a>
 					<a href="https://twitter.com/openpay_" class="footer-icon twit">
+						<img src="./images/social/Twitter.svg">
 						Twitter
 					</a>
 				</span>
-            <span>
+			<span>
 					<a href="https://au.linkedin.com/company/open-pay" class="footer-icon linked">
+						<img src="./images/social/in.svg">
 						LinkedIn
 					</a>
 					<a href="https://www.instagram.com/openpay_" class="footer-icon ig">
+						<img src="./images/social/Insta.svg">
 						Instagram
 					</a>
 				</span>
-        </div>
-        <div class="footerAppWrapper">
-            <a href="https://itunes.apple.com/au/app/openpay/id1166424403?mt=8">
-                <img class="apple" src="./images/apple.svg">
-            </a>
-            <a href="https://play.google.com/store/apps/details?id=com.ocean.openpay">
-                <img class="android" src="./images/android.svg">
-            </a>
-        </div>
-            <div class="footerMoreLinksMenu">
-                <a href="legal.html" class="footerNav">Privacy</a>
-                <a href="legal.html" class="footerNav">Terms & Conditions</a>
-                <a href="legal.html" class="footerNav">User Licence</a>
-                <a href="legal.html" class="footerNav">PCI Data Security</a>
-            </div>
-        <p>© Openpay &nbsp; | &nbsp; Made in Melbourne, Australia</p>
-        <a class="whiteLogo" href="index.html">
-            <img src="./images/openpay_logo_white.svg">
-        </a>
+		</div>
+		<div class="footerAppWrapper">
+			<a href="https://itunes.apple.com/au/app/openpay/id1166424403?mt=8">
+				<img class="apple" src="./images/apple.svg">
+			</a>
+			<a href="https://play.google.com/store/apps/details?id=com.ocean.openpay">
+				<img class="android" src="./images/android.svg">
+			</a>
+		</div>
+		<div class="footerMoreLinksMenu">
+			<a href="legal.html" class="footerNav">Privacy</a>
+			<a href="legal.html" class="footerNav">Terms & Conditions</a>
+			<a href="legal.html" class="footerNav">User Licence</a>
+			<a href="legal.html" class="footerNav">PCI Data Security</a>
+		</div>
+		<p>© Openpay &nbsp; | &nbsp; Made in Melbourne, Australia</p>
+		<a class="whiteLogo" href="index.html">
+			<img src="./images/openpay_logo_white.svg">
+		</a>
 
-    </div>
+	</div>
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script>
-
-    // When the user clicks on the button, scroll to the top of the document
-    function topFunction() {
-        document.body.scrollTop = 0;
-        document.documentElement.scrollTop = 0;
-    }
-</script>
 </body>
 </html>
