--- a/newDesign/bunnings.html
+++ b/newDesign/bunnings.html
@@ -261,29 +261,34 @@ Use Openpay at Bunnings to get the kitchen you really want. You can split the co
 
 
 
-   
-   
+
+
     <div class="footer">
         <div class="footerMenu">
-            <a href="help.html" class="footerNav">Help & Contact</a>
-            <a href="business.html" class="footerNav">For Merchants</a>
-            <a href="careers.html" class="footerNav">Careers</a>
-            <a href="blog.html" class="footerNav">Blog</a>
+            <a href="shop.html" class="footerNav">Shop now</a>
+            <a href="how.html" class="footerNav">how it works</a>
+            <a href="business.html" class="footerNav">I'm a business</a>
+            <a href="help.html" class="footerNav">Help & contact</a>
+            <a href="legal.html" class="footerNav">Legal stuff</a>
         </div>
         <div class="socialLinks">
 				<span>
-					<a href="https://m.facebook.com/openpayau" class="footer-icon fb">
+					<a href="https://facebook.com/openpayau" class="footer-icon fb">
+						<img src="./images/social/Fb.svg">
 						Facebook
 					</a>
 					<a href="https://twitter.com/openpay_" class="footer-icon twit">
+						<img src="./images/social/Twitter.svg">
 						Twitter
 					</a>
 				</span>
             <span>
 					<a href="https://au.linkedin.com/company/open-pay" class="footer-icon linked">
+						<img src="./images/social/in.svg">
 						LinkedIn
 					</a>
 					<a href="https://www.instagram.com/openpay_" class="footer-icon ig">
+						<img src="./images/social/Insta.svg">
 						Instagram
 					</a>
 				</span>
@@ -297,13 +302,13 @@ Use Openpay at Bunnings to get the kitchen you really want. You can split the co
             </a>
         </div>
         <div class="footerMoreLinksMenu">
-            <a href="privacy.html" class="footerNav">Privacy</a>
-            <a href="terms.html" class="footerNav">Terms & Conditions</a>
-            <a href="userLicence.html" class="footerNav">User Licence</a>
-            <a href="PCI.html" class="footerNav">PCI Data Security</a>
+            <a href="legal.html" class="footerNav">Privacy</a>
+            <a href="legal.html" class="footerNav">Terms & Conditions</a>
+            <a href="legal.html" class="footerNav">User Licence</a>
+            <a href="legal.html" class="footerNav">PCI Data Security</a>
         </div>
-        <p>© Openpay &nbsp; | &nbsp; Made with <3 in Melbourne, Australia</p>
-        <a class="whiteLogo" href="/">
+        <p>© Openpay &nbsp; | &nbsp; Made in Melbourne, Australia</p>
+        <a class="whiteLogo" href="index.html">
             <img src="./images/openpay_logo_white.svg">
         </a>
 
