script that identify adBlock and hide instegram

--- a/newDesign/index.html
+++ b/newDesign/index.html
@@ -273,5 +273,17 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="scripts/Typer.js"></script>
 	<script src="scripts/instegram.js"></script>
+	<script src="/ads.js" type="text/javascript"></script>
+	<script type="text/javascript">
+
+        if(document.getElementById('ZCxqyWPOorwB')){
+            $('.instagram').show();
+            console.log('Blocking Ads: No');
+        } else {
+            $('.instagram').hide();
+            console.log('Blocking Ads: Yes');
+        }
+
+	</script>
 </body>
 </html>
