--- a/newDesign/bunnings.html
+++ b/newDesign/bunnings.html
@@ -237,7 +237,7 @@ And now you can use Openpay for anything you need at Bunnings. Whether its a hot
                             <h1 style="text-align: left; padding-left: 0; padding-bottom: 35px;">Find your closest Bunnings</h1>
                             <p>With 100’s of locations across Australia., your DIY dreams are closer than you think. </p>
                         </div>
-                         <div class="btnBox"><a href="#">Visit the store finder</a></div>
+                         <div class="btnBox"><a href="https://www.bunnings.com.au/stores">Visit the store finder</a></div>
                 
                    
                 </ol>
@@ -255,7 +255,7 @@ And now you can use Openpay for anything you need at Bunnings. Whether its a hot
             <h1>Build your dream kitchen today with up to 18 months to pay.</h1>
             <p>
 Use Openpay at Bunnings to get the kitchen you really want. You can split the cost of your kitchen over up to 18 months – interest free, allowing you to make your dream kitchen a reality today.</p>
-<div class="btnBox"><a href="#">Get pre-approved</a></div>
+<div class="btnBox"><a href="https://retailer.myopenpay.com.au/customerweb/live/?CallbackURL=https%3A%2F%2Fwww.openpay.com.au%2Fbunnings%2F&AuthToken=OP%20-5690%7CDE27378C-81E6-4B4A-BFCE-38E7594FA933&IsNewCustomer=True">Get pre-approved</a></div>
         </div></div>
 
 
