--- a/newDesign/index.html
+++ b/newDesign/index.html
@@ -84,7 +84,7 @@
 					<img src="./images/feature-three-for-free.png">
 				</div>
 				<div class="col-3">
-					<img src="./images/featurew-bunnings.png">
+					<a href="bunnings.html"><img src="./images/featurew-bunnings.png"></a>
 				</div>
 				<div class="col-3">
 					<img src="./images/feature-lincraft.png">
