--- a/newDesign/index.html
+++ b/newDesign/index.html
@@ -87,7 +87,7 @@
 					<a href="bunnings.html"><img src="./images/featurew-bunnings.png"></a>
 				</div>
 				<div class="col-3">
-					<img src="./images/feature-lincraft.png">
+					<a href="https://www.lincraft.com.au/"><img src="./images/feature-lincraft.png"></a>
 				</div>
 			</div>
 			<div class="clear"></div>
