--- a/newDesign/shop.html
+++ b/newDesign/shop.html
@@ -150,15 +150,15 @@
         <div class="bodyContainer">
             <h1>Featured Retailers</h1>
             <div class="treeBanners">
-                <div class="col-3">
-                    <img src="./images/feature-three-for-free.png">
-                </div>
-                <div class="col-3">
-                    <img src="./images/featurew-bunnings.png">
-                </div>
-                <div class="col-3">
-                    <img src="./images/feature-lincraft.png">
-                </div>
+		 <div class="col-3">
+			<img src="./images/feature-three-for-free.png">
+		</div>
+		<div class="col-3">
+			<a href="bunnings.html"><img src="./images/featurew-bunnings.png"></a>
+		</div>
+		<div class="col-3">
+			<a href="https://www.lincraft.com.au/"><img src="./images/feature-lincraft.png"></a>
+		</div>
             </div>
             <div class="clear"></div>
         </div>
