Home page changes

--- a/newDesign/index.html
+++ b/newDesign/index.html
@@ -78,7 +78,7 @@
 			</div>
 		</div>
 		<div class="promotions">
-			<h1>Featured Retailers</h1>
+			<h1>Featured Promotions</h1>
 			<div class="treeBanners">
 				<div class="col-3">
 					<img src="./images/feature-three-for-free.png">
@@ -93,7 +93,7 @@
 			<div class="clear"></div>
 		</div>
 		<div class="takeControl">
-			<h1>Take control on how you pay</h1>
+			<h1>Take control of how you pay</h1>
 			<p>
 				Whether you're shopping for clothes, servicing your car or taking care of your health, have it today with more time to pay.
                 <br>
