Home page changes

--- a/newDesign/index.html
+++ b/newDesign/index.html
@@ -136,62 +136,42 @@
 			<div class="fourBanners">
 				<div class="col-4">
 					<div class="marketToProvide">
-						<h3>Marketing to provide</h3>
+						<img class="small-img" src="images/categoryPics/Auto.jpeg"/>
 					</div>
 				</div>
 				<div class="col-4">
 					<div class="marketToProvide">
-						<h3>Marketing to provide</h3>
+						<img src="images/categoryPics/Beauty.jpg"/>
 					</div>
 				</div>
 				<div class="col-4">
 					<div class="marketToProvide">
-						<h3>Marketing to provide</h3>
+						<img src="images/categoryPics/Dental.jpg"/>
 					</div>
 				</div>
 				<div class="col-4">
 					<div class="marketToProvide">
-						<h3>Marketing to provide</h3>
+						<img src="images/categoryPics/Fashion.jpg"/>
 					</div>
 				</div>
 				<div class="col-4">
 					<div class="marketToProvide">
-						<h3>Marketing to provide</h3>
+						<img src="images/categoryPics/Health.jpeg"/>
 					</div>
 				</div>
 				<div class="col-4">
 					<div class="marketToProvide">
-						<h3>Marketing to provide</h3>
+						<img src="images/categoryPics/Home-and-Garden.jpeg"/>
 					</div>
 				</div>
 				<div class="col-4">
 					<div class="marketToProvide">
-						<h3>Marketing to provide</h3>
+						<img class="small-img" src="images/categoryPics/Sports-Outdoors.jpg"/>
 					</div>
 				</div>
 				<div class="col-4">
 					<div class="marketToProvide">
-						<h3>Marketing to provide</h3>
-					</div>
-				</div>
-				<div class="col-4">
-					<div class="marketToProvide">
-						<h3>Marketing to provide</h3>
-					</div>
-				</div>
-				<div class="col-4">
-					<div class="marketToProvide">
-						<h3>Marketing to provide</h3>
-					</div>
-				</div>
-				<div class="col-4">
-					<div class="marketToProvide">
-						<h3>Marketing to provide</h3>
-					</div>
-				</div>
-				<div class="col-4">
-					<div class="marketToProvide">
-						<h3>Marketing to provide</h3>
+						<img src="images/categoryPics/Trades-and-Services.jpg"/>
 					</div>
 				</div>
 				<div class="clear"></div>
