shop now change

--- a/newDesign/shop.html
+++ b/newDesign/shop.html
@@ -120,14 +120,14 @@
                 <input type="submit" value="Search" id="search-btn">
             </div>
             <div class="moreFilters">
-                <select class="city" id="city">
-                    <option value>Select Suburb</option>
-                    <option value="Melbourne">Melbourne</option>
-                    <option value="Sydney">Sydney</option>
-                    <option value="Orange">Orange</option>
-                    <option value="Albury">Albury</option>
-                    <option value="Bathurst">Bathurst</option>
-                </select>
+                <!--<select class="city" id="city">-->
+                    <!--<option value>Select Suburb</option>-->
+                    <!--<option value="Melbourne">Melbourne</option>-->
+                    <!--<option value="Sydney">Sydney</option>-->
+                    <!--<option value="Orange">Orange</option>-->
+                    <!--<option value="Albury">Albury</option>-->
+                    <!--<option value="Bathurst">Bathurst</option>-->
+                <!--</select>-->
                 <select class="category" id="category">
                     <option value>Select Category</option>
                     <option value="209002">Health &amp; Wellbeing</option>
