how page - change

--- a/newDesign/how.html
+++ b/newDesign/how.html
@@ -78,8 +78,8 @@
     </div>
     <div class="intrigued">
         <div class="bodyContainer">
-            <h1>So you're intrigued</h1>
-            <p>Start by downloading the app and signing up, you can sign up instore or during online checkout too.</p>
+            <h1>So you’re intrigued?</h1>
+            <p>Start by downloading the app and signing up. You can sign up instore or during online checkout too.</p>
         </div>
     </div>
     <div class="howItWorks">
@@ -156,12 +156,12 @@
 		<div class="col-3">
 			<img src="./images/feature-three-for-free.png">
 		</div>
-		<div class="col-3">
-			<img src="./images/featurew-bunnings.png">
-		</div>
-		<div class="col-3">
-			<img src="./images/feature-lincraft.png">
-		</div>
+        <div class="col-3">
+            <a href="bunnings.html"><img src="./images/featurew-bunnings.png"></a>
+        </div>
+        <div class="col-3">
+            <a href="https://www.lincraft.com.au/"><img src="./images/feature-lincraft.png"></a>
+        </div>
             </div>
             <div class="clear"></div>
         </div>
