business.html page - change

--- a/newDesign/business.html
+++ b/newDesign/business.html
@@ -204,7 +204,7 @@
     <div class="seamless">
         <div class="bodyContainer">
             <h1>Seamless integration with your store.</h1>
-            <p>Customers don't care what eCommerce software you use, but we do. we integrate with the industry's best platforms so you can enable a wider audience.</p>
+            <p>Customers don't care what eCommerce software you use, but we do. We integrate with the industry's best platforms so you can enable a wider audience.</p>
             <div class="icons">
                 <img src="images/eComm/CommerceVision.png"/>
                 <img src="images/eComm/DemandWare.png"/>
