help.html page - change

--- a/newDesign/help.html
+++ b/newDesign/help.html
@@ -72,7 +72,7 @@
         <div class="bodyContainer">
             <div class="heroInfo">
                 <h1>We're here for you.</h1>
-                <p>Need help? we've got you. Check out our frequently asked questions or contact us directly below.</p>
+                <p>Need help? We’ve got you. Check out our frequently asked questions or contact us directly below.</p>
             </div>
         </div>
     </div>
