shop.html page - change

--- a/newDesign/shop.html
+++ b/newDesign/shop.html
@@ -169,47 +169,47 @@
             <h1>Browse by category</h1>
             <div class="fourBanners">
                 <div class="col-4">
-                    <div class="marketToProvide" data-value="209002">
+                    <div class="marketToProvide cat-1" data-value="209002">
                         <h3>Health & wellbeing</h3>
                     </div>
                 </div>
                 <div class="col-4">
-                    <div class="marketToProvide" data-value="209003">
+                    <div class="marketToProvide cat-2" data-value="209003">
                         <h3>Fashion</h3>
                     </div>
                 </div>
                 <div class="col-4">
-                    <div class="marketToProvide" data-value="209004">
+                    <div class="marketToProvide cat-3" data-value="209004">
                         <h3>Lifestyle</h3>
                     </div>
                 </div>
                 <div class="col-4">
-                    <div class="marketToProvide" data-value="209007">
+                    <div class="marketToProvide cat-4" data-value="209007">
                         <h3>Beauty</h3>
                     </div>
                 </div>
                 <div class="col-4">
-                    <div class="marketToProvide" data-value="209008">
+                    <div class="marketToProvide cat-5" data-value="209008">
                         <h3>Trades & services</h3>
                     </div>
                 </div>
                 <div class="col-4">
-                    <div class="marketToProvide" data-value="209001">
+                    <div class="marketToProvide cat-6" data-value="209001">
                         <h3>Automotive</h3>
                     </div>
                 </div>
                 <div class="col-4">
-                    <div class="marketToProvide" data-value="209005">
+                    <div class="marketToProvide cat-7" data-value="209005">
                         <h3>Home & garden</h3>
                     </div>
                 </div>
                 <div class="col-4">
-                    <div class="marketToProvide" data-value="209006">
+                    <div class="marketToProvide cat-8" data-value="209006">
                         <h3>Dental</h3>
                     </div>
                 </div>
                 <div class="col-4">
-                    <div class="marketToProvide" data-value="209009">
+                    <div class="marketToProvide cat-9" data-value="209009">
                         <h3>Sports &amp; Outdoors</h3>
                     </div>
                 </div>
