--- a/newDesign/index.html
+++ b/newDesign/index.html
@@ -131,47 +131,52 @@
 			</div>
 			<div class="clear"></div>
 		</div>
-		<div class="whereCanShop">
+		<div class="whereCanShop byCategory">
 			<h1>So where can I shop?</h1>
 			<div class="fourBanners">
 				<div class="col-4">
-					<div class="marketToProvide">
-						<img class="small-img" src="images/categoryPics/Auto.jpeg"/>
+					<div class="marketToProvide cat-1" data-value="209002">
+						<h3>Health & wellbeing</h3>
 					</div>
 				</div>
 				<div class="col-4">
-					<div class="marketToProvide">
-						<img src="images/categoryPics/Beauty.jpg"/>
+					<div class="marketToProvide cat-2" data-value="209003">
+						<h3>Fashion</h3>
 					</div>
 				</div>
 				<div class="col-4">
-					<div class="marketToProvide">
-						<img src="images/categoryPics/Dental.jpg"/>
+					<div class="marketToProvide cat-3" data-value="209004">
+						<h3>Lifestyle</h3>
 					</div>
 				</div>
 				<div class="col-4">
-					<div class="marketToProvide">
-						<img src="images/categoryPics/Fashion.jpg"/>
+					<div class="marketToProvide cat-4" data-value="209007">
+						<h3>Beauty</h3>
 					</div>
 				</div>
 				<div class="col-4">
-					<div class="marketToProvide">
-						<img src="images/categoryPics/Health.jpeg"/>
+					<div class="marketToProvide cat-5" data-value="209008">
+						<h3>Trades & services</h3>
 					</div>
 				</div>
 				<div class="col-4">
-					<div class="marketToProvide">
-						<img src="images/categoryPics/Home-and-Garden.jpeg"/>
+					<div class="marketToProvide cat-6" data-value="209001">
+						<h3>Automotive</h3>
 					</div>
 				</div>
 				<div class="col-4">
-					<div class="marketToProvide">
-						<img class="small-img" src="images/categoryPics/Sports-Outdoors.jpg"/>
+					<div class="marketToProvide cat-7" data-value="209005">
+						<h3>Home & garden</h3>
 					</div>
 				</div>
 				<div class="col-4">
-					<div class="marketToProvide">
-						<img src="images/categoryPics/Trades-and-Services.jpg"/>
+					<div class="marketToProvide cat-8" data-value="209006">
+						<h3>Dental</h3>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="marketToProvide cat-9" data-value="209009">
+						<h3>Sports &amp; Outdoors</h3>
 					</div>
 				</div>
 				<div class="clear"></div>
