--- a/newDesign/index.html
+++ b/newDesign/index.html
@@ -204,6 +204,7 @@
 				<div id="instagram"></div>
 			</div>
 		</div>
+		<div class="noInstagram"></div>
 		<div class="footer">
 			<div class="footerMenu">
 				<a href="shop.html" class="footerNav">Shop now</a>
