--- a/newDesign/register.html
+++ b/newDesign/register.html
@@ -74,7 +74,7 @@
             <h1>Merchant Registration</h1>
             <p>Merchant Details</p>
 
-            <form id="msform">
+            <form id="msform" action="https://formspree.io/kfir_m@optimove.com" method="POST">
                 <!-- progressbar -->
                 <ul id="progressbar">
                     <li class="active"></li>
